# fastSTTC

./: .gitignore  README.md  pyproject.toml
docs/: api.md
examples/: quickstart.ipynb
matlab/: bin_spike_times.m  generate_spike_trains.m  sttc.m  sttc_null.m  tile_spikes.m  zscore_sttc.m
src/faststtc/: __init__.py  _tiling.py  sttc.py  utils.py
tests/: test_faststtc.py
