[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name        = "faststtc"
version     = "0.1.0"
description = "Fast vectorised Spike Time Tiling Coefficient (STTC) for neural spike trains"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
examples = ["matplotlib>=3.4", "jupyter"]
dev      = ["pytest>=7", "matplotlib>=3.4", "jupyter"]

[project.urls]
Homepage      = "https://github.com/YOUR_GITHUB_USERNAME/faststtc"
Documentation = "https://github.com/YOUR_GITHUB_USERNAME/faststtc/blob/main/docs/api.md"
Issues        = "https://github.com/YOUR_GITHUB_USERNAME/faststtc/issues"

[tool.setuptools.packages.find]
where = ["src"]
